methods.returning.MethodsReturning.scala.code

def haveBaggle():Boolean = {
  
var vuBiscuit = 0
  while(vuBiscuit == 0){
    for (c <- 1 to 6) {
     avance();if (estSurBiscuit()){
       vuBiscuit = 1
     } 
    
    }
    
  }
}